Created footer and Modal box composite

--- a/src/composite/header/header.module.css
+++ b/src/composite/header/header.module.css
@@ -1,11 +1,12 @@
-.container {
+.headerContainer {
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
 	background-color: #7b0808;
 	color: #fff;
 	padding: 4px;
 	justify-content: space-between;
 	height: auto;
+	/* position: fixed; */
 }
 img {
 	border-radius: 25px;
@@ -13,16 +14,16 @@ img {
 	width: 55px;
 	margin: 5px 0 0 15px;
 }
-.container ul {
+.headerContainer ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-top: 3px;
 }
-.container ul li {
-	display: flex;
+.headerContainer ul li {
 	background-color: #ffffff;
 	margin: 10px 15px 0 0;
 	border-radius: 15px;
 	padding: 5px;
+	list-style-type: none;
 }
