--- a/src/composite/footer/footer.module.css
+++ b/src/composite/footer/footer.module.css
@@ -1,4 +1,4 @@
-.footerContainer {
+.footer-container {
 	background-color: #7b0808;
 	display: flex;
 	justify-content: flex-end;
@@ -6,10 +6,11 @@
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 50px;
+	height: 70px;
 }
 
-.footerContainer p {
+.footer-container p {
 	margin-right: 25px;
+	margin-left: 25px;
 	color: white;
 }
