--- a/src/composite/header/header.module.css
+++ b/src/composite/header/header.module.css
@@ -1,4 +1,4 @@
-.headerContainer {
+.header-container {
 	display: flex;
 	align-items: center;
 	background-color: #7b0808;
@@ -6,7 +6,6 @@
 	padding: 4px;
 	justify-content: space-between;
 	height: auto;
-	/* position: fixed; */
 }
 img {
 	border-radius: 25px;
@@ -14,16 +13,19 @@ img {
 	width: 55px;
 	margin: 5px 0 0 15px;
 }
-.headerContainer ul {
+.header-container ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-top: 3px;
 }
-.headerContainer ul li {
+.header-container ul li {
 	background-color: #ffffff;
 	margin: 10px 15px 0 0;
 	border-radius: 15px;
 	padding: 5px;
 	list-style-type: none;
+}
+h1 {
+	margin-left: 10px;
 }
