--- a/src/pages/login-page/loginStyle.module.css
+++ b/src/pages/login-page/loginStyle.module.css
@@ -5,3 +5,10 @@
 	align-items: center;
 	height: 80vh;
 }
+
+@media only screen and(max-width: 600px) {
+	div {
+		width: 100%;
+		height: auto;
+	}
+}
