--- a/src/common/button/ButtonStyle.module.css
+++ b/src/common/button/ButtonStyle.module.css
@@ -1,6 +1,7 @@
 button {
 	backface-visibility: hidden;
 	background-color: #405cf5;
+	border-radius: 25px;
 	border-width: 0;
 	box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
 		rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
@@ -18,6 +19,5 @@ button {
 	position: relative;
 	text-align: center;
 	text-transform: none;
-	transform: translateZ(0);
-	transition: all 0.2s, box-shadow 0.08s ease-in;
+	margin-left: 10px;
 }
