--- a/src/common/input/Input.module.css
+++ b/src/common/input/Input.module.css
@@ -1,8 +1,11 @@
-.input {
+input {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 5px;
-	margin: 5px;
+	padding: 12px 20px;
+	margin: 8px 0;
+	width: 100%;
+	border: 1px solid #ccc;
+	border-radius: 4px;
 }
