--- a/src/composite/dialogBox/modalStyle.module.css
+++ b/src/composite/dialogBox/modalStyle.module.css
@@ -1,6 +1,8 @@
 dialog {
-	position: relative;
-	max-width: 20rem;
+	position: absolute;
+	margin-bottom: 300px;
+	height: 20rem;
+	max-width: 40rem;
 	padding: 2rem;
 	border: 0;
 	border-radius: 0.5rem;
@@ -11,4 +13,11 @@ dialog {
 	position: absolute;
 	top: 0.25em;
 	right: 0.25em;
+}
+.overlay {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background: rgba(0, 0, 0, 0.5);
 }
