--- a/src/composite/footer/footer.module.css
+++ b/src/composite/footer/footer.module.css
@@ -1,17 +1,13 @@
 .footer-container {
 	background-color: #7b0808;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	position: absolute;
-	bottom: 0;
 	width: 100%;
-	height: 70px;
 	margin-top: auto;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
-
 .footer-container p {
-	margin-right: 25px;
-	margin-left: 25px;
+	padding: 15px;
 	color: white;
 }
