--- a/src/common/button/ButtonStyle.module.css
+++ b/src/common/button/ButtonStyle.module.css
@@ -1,23 +1,46 @@
 button {
-	backface-visibility: hidden;
-	background-color: #405cf5;
-	border-radius: 25px;
-	border-width: 0;
-	box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
-		rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
+	align-items: center;
+	appearance: none;
+	background-color: #fff;
+	border: 1px solid #dbdbdb;
+	border-radius: 0.375em;
+	box-shadow: none;
 	box-sizing: border-box;
-	color: #fff;
+	color: #7b0808;
 	cursor: pointer;
-	font-family: 'Helvetica Neue', sans-serif;
-	font-size: 100%;
-	height: 44px;
-	line-height: 1.15;
-	margin: 12px 0 0;
-	outline: none;
-	overflow: hidden;
-	padding: 0 25px;
+	display: inline-flex;
+	font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Helvetica,
+		Arial, sans-serif;
+	font-size: 1rem;
+	height: 2em;
+	justify-content: center;
+	line-height: 1.5;
+	padding: calc(0.5em - 1px) 1em;
 	position: relative;
 	text-align: center;
-	text-transform: none;
-	margin-left: 10px;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	vertical-align: top;
+	white-space: nowrap;
+	margin-top: 8px;
+}
+
+button:active {
+	border-color: #4a4a4a;
+	outline: 0;
+}
+
+button:focus {
+	border-color: #485fc7;
+	outline: 0;
+}
+
+button:hover {
+	border-color: #b5b5b5;
+}
+
+button:focus:not(:active) {
+	box-shadow: rgba(72, 95, 199, 0.25) 0 0 0 0.125em;
 }
