--- a/src/pages/incidentsPage/incidentsPage.module.css
+++ b/src/pages/incidentsPage/incidentsPage.module.css
@@ -4,6 +4,13 @@
 	justify-content: center;
 	align-items: center;
 }
+.modal-content {
+	background: #fff;
+	border-radius: 5px;
+	padding: 20px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+	max-width: 500px;
+}
 @media only screen and(max-width: 900px) {
 	.page-container {
 		width: 100%;
