--- a/src/composite/dialogBox/modalStyle.module.css
+++ b/src/composite/dialogBox/modalStyle.module.css
@@ -1,9 +1,12 @@
-dialog {
+.modal {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
+	background: #fff;
+	border-radius: 5px;
+	padding: 20px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+	max-width: 500px;
 }
 .modal-close-btn {
 	font-size: 12px;
@@ -12,4 +15,13 @@ dialog {
 	right: 0.25em;
 	width: 40px;
 	padding: 5px;
+}
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+
+	background: rgba(0, 0, 0, 0.5);
 }
