--- a/src/common/dropdown/DropdownStyle.module.css
+++ b/src/common/dropdown/DropdownStyle.module.css
@@ -1,13 +1,11 @@
-/* .footer-container {
-	position: relative;
-	display: inline-block;
+.dropdown label {
+	display: block;
 }
-.dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	padding: 12px 16px;
-	z-index: 1;
-} */
+.dropdown select {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	width: 100%;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+}
