--- a/src/pages/incidentsPage/incidentsPage.module.css
+++ b/src/pages/incidentsPage/incidentsPage.module.css
@@ -3,11 +3,26 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	padding: 20px;
+	width: 100%;
 }
-
+.search-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+.search-container input {
+	width: 600px;
+	margin-left: 20px;
+}
 @media only screen and(max-width: 900px) {
 	.page-container {
 		width: 100%;
-		height: auto;
+	}
+	.search-container {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
 	}
 }
